2003-01-28  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-satisfydepends: apply patch from Daniel Schepler <schepler@math.berkeley.edu>,
	fixing obvious typos. Bug: 178552

2003-01-18  Junichi Uekawa  <dancer@debian.org>

	* THANKS: update.

	* pbuilder-modules (pbuilder-options): doit=cp instead of "ln -s".
	in pbuilder-modules.
	Thanks to eichin@metacarta.com (Mark Eichin) for reporting this.
	Bug: 177173

2003-01-16  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-modules (save_aptcache,recover_aptcache): 
	use "find | while read ; " combination to go over the limits of 
	shell globbing.
	#176872, reported by "Michel Dänzer" <daenzer@debian.org>.

2003-01-10  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-user-mode-linux: use /var/cache/pbuilder/pbuilder-umlresult 
	as directory to mount hostfs for result.
	(UML_DEBUGMODE): --uml-debugmode option to enable trace of 
	shell.

	* Makefile (install): create pbuilder-umlresult dir.

	* pbuilder-uml.conf.5: document UML_BUILDRESULT

	* pbuilder-uml.conf (UML_BUILDRESULT): add UML_BUILDRESULT=

	* pbuilder-user-mode-linux (EXTRAOPT): add support for exitcode.
	Thanks mdz for the hint!
	(UML_EXTRAOPT): try and implement BUILDRESULT

2003-01-09  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-user-mode-linux: use /var/cache/pbuilder/pbuilder-mnt
	instead of /mnt, which may be used for other tasks.
	PBUILDER_COWFILENAME is buildplace/$$.cow.

	* Makefile (install): install /var/cache/pbuilder/pbuilder-mnt dir.

	* pbuilder-user-mode-linux (UML_EXTRAOPT): --buildresult ignore.

	* pbuilder-user-mode-linux.1: document --uml-hostname

	* pbuilder-user-mode-linux: set hostname inside UML.
	(UML_EXTRAOPT): --uml-hostname option.

	* pbuilder-uml.conf.5: document

	* pbuilder-uml.conf (UML_HOSTNAME): add variable for hostname

2003-01-08  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-user-mode-linux (UML_EXTRAOPT): --logfile option.

	* pbuilder-user-mode-linux.1: and document these new options.
