@@ -245,8 +245,7 @@ is executed after build fails, before cleanup.
 is executed before unpacking the source inside the chroot,
 after setting up the chroot environment.
 Create $TMP, and $TMPDIR if necessary.
-
-
+This can be used for calling apt-get update.
 
 \" End of hookdir description
 
