@@ -1,5 +1,9 @@
 2003-01-28  Junichi Uekawa  <dancer@debian.org>
 
+	* Documentation/pbuilder-doc.xml (EXTRAPACKAGES): document that.
+
+	* pbuilder.8: document apt-get update hook.
+
 	* pbuilder-satisfydepends: apply patch from Daniel Schepler <schepler@math.berkeley.edu>,
 	fixing obvious typos. Bug: 178552
 
